# WholeLottaSync-API

./: .gitignore  Makefile  README.md  pyproject.toml
src/: main.py
src/application/commands/: create_user.py
src/application/common/: base_command.py  base_command_handler.py  base_pwd_hasher.py  base_uow.py  base_user_repo.py  dtos.py
src/application/exceptions/: email_already_exist_exception.py  username_already_exist_exception.py
src/domain/common/: base_entity.py  base_exception.py  base_pwd_hasher.py  base_value_obj.py
src/domain/entities/: room.py  user.py
src/domain/exceptions/: room_exceptions.py  user_credentials.py
src/domain/utils/: pwd_hasher.py
src/domain/values/: user_email.py  user_name.py
src/domain/values/room/: room_accessibility.py  room_max_participants.py  room_name.py
src/domain/values/user/: user_email.py  user_hashed_pwd.py  user_name.py
src/infra/: pwd_hasher.py
src/infra/database/: config.py  uow.py
src/infra/database/persistence/models/: user.py
src/infra/database/repositories/: user_repo.py
src/infra/database/repositories/mappers/: user_mapper.py
src/infra/models/: base.py  user.py
src/infra/repositories/: user_repo.py
src/infra/repositories/mappers/: user_mapper.py
src/presentation/api/: __main__.py
