[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
websockets = "^12.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
email-validator = "^2.1.1"
bcrypt = "^4.1.3"
dishka = "^1.1.1"
pydantic-settings = "^2.3.1"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ruff = "^0.4.4"
black = "^24.4.2"
isort = "^5.13.2"
pygount = "^1.6.1"
pre-commit = "^3.7.1"

[tool.mypy]
python_version = "3.12"

[tool.black]
line-length=100

[tool.isort]
profile = "black"
skip = [
    ".mypy_cache/*",
    ".git/*",
]

[tool.ruff]
line-length=100
target-version = "py312"
show-fixes = true
